5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1643_1055.log
== TEST (2019-04-15 11:14:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v0 = float(input("escreva o valor da velicidade inicial: "))
a = radians(float(input("escreva o valor do angulo: "))
D = float(input("escreva a distancia entre o passaro e o porco: "))
from math import *
r = ((v**2)*sin(2*a))/9.8
p = D - r
if (abs(p) < 0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
				
print(mensagem)
-- ERROR:
File "XXXX", line 6
    D = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 11:14:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v0 = float(input("escreva o valor da velicidade inicial: "))
a = radians(float(input("escreva o valor do angulo: "))
d = float(input("escreva a distancia entre o passaro e o porco: "))
from math import *
r = ((v**2)*sin(2*a))/9.8
p = d - r
if (abs(p) < 0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
				
print(mensagem)
-- ERROR:
File "XXXX", line 6
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 11:16:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v0 = float(input("escreva o valor da velicidade inicial: "))
a = radians(float(input("escreva o valor do angulo: ")))
d = float(input("escreva a distancia entre o passaro e o porco: "))
from math import *
r = ((v**2)*sin(2*a))/9.8
p = d - r
if (abs(p) < 0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
				
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 11:17:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v0 = float(input("escreva o valor da velicidade inicial: "))
a = float(input("escreva o valor do angulo: "))
d = float(input("escreva a distancia entre o passaro e o porco: "))
from math import *
r = ((v**2)*sin(2*a))/9.8
p = d - r
if (abs(p) < 0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
				
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    r = ((v**2)*sin(2*a))/9.8
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 11:18:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
v0 = float(input("escreva o valor da velicidade inicial: "))
a = radians(float(input("escreva o valor do angulo: "))
d = float(input("escreva a distancia entre o passaro e o porco: "))
r = ((v**2)*sin(2*a))/9.8
p = d - r
if (abs(p) < 0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
				
print(mensagem)
-- ERROR:
File "XXXX", line 7
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 11:19:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
v0 = float(input("escreva o valor da velicidade inicial: "))
a = radians(float(input("escreva o valor do angulo: ")))
d = float(input("escreva a distancia entre o passaro e o porco: "))
r = ((v**2)*sin(2*a))/9.8
p = d - r
if (abs(p) < 0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
				
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    r = ((v**2)*sin(2*a))/9.8
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 11:20:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
v0 = float(input("escreva o valor da velicidade inicial: "))
a = radians(float(input("escreva o valor do angulo: ")))
d = float(input("escreva a distancia entre o passaro e o porco: "))
r = ((v0**2)*sin(2*a))/9.8
p = d - r
if (abs(p) < 0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
				
print(mensagem)
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 11:20:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
v0 = float(input("escreva o valor da velicidade inicial: "))
a = radians(float(input("escreva o valor do angulo: ")))
d = float(input("escreva a distancia entre o passaro e o porco: "))
r = ((v0**2)*sin(2*a))/9.8
p = d - r
if (abs(p) < 0.1):
	mensagem = "sim"
else:
	mensagem = "nao"
				
print(mensagem)
-- EXECUTION TIME:
0.144572
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
